--- a/package.json
+++ b/package.json
@@ -20,19 +20,26 @@
   "dependencies": {
     "@hapi/boom": "^9.1.0",
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "passport": "^0.4.1",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
     "@types/hapi__joi": "^17.1.6",
     "@types/mongodb": "^3.5.31",
     "@types/node": "^14.14.2",
     "@types/passport": "^1.0.4",
     "@types/passport-http": "^0.3.8",
+    "@types/passport-jwt": "^3.0.3",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
