--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "DEBUG=app* nodemon",
-    "start": "DEBUG=app* ts-node src/index"
+    "start:dev": "nodemon",
+    "start": "ts-node src/index"
   },
   "keywords": [
     "typescript",
